--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">하나라도 해보자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t4 center">강의 하나 완주하기</div>
+        <div class="bucket img1-t4 center done">강의 하나 완주하기</div>
         <div class="bucket img2 center">전역하기</div>
         <div class="bucket img1-t5 center">원한 전각 다 읽기</div>
         <div class="bucket img2-t4 center">천만원 모으기</div>
